fix some spacing

--- a/LGC-eng.tex
+++ b/LGC-eng.tex
@@ -15,7 +15,7 @@
 (Unofficial translation.)\footnote{}
 
 \section{The big cemeteries under the moon}
-Replace the philosophy at the center of the scientific activity, restore the philosophy of science, as programme! For this, we propose to reactivate the major tool which constitutes \emph{logic}, by freeing it from the rut of the \enquote{linguistic turn}; this reactivation would be by means of geometry, a \enquote{geometric turn} of a sort. The geometrization becomes possible---and above all necessary---through the eruption of the \emph{cognitive}, which makes obsolete the old paradigm of verismo/dualism/atomism/essentialism inherited from the 20th century, the century of \emph{scientism}.
+Replace the philosophy at the center of the scientific activity, restore the philosophy of science, as programme! For this, we propose to reactivate the major tool which constitutes \emph{logic}, by freeing it from the rut of the \enquote{linguistic turn}; this reactivation would be by means of geometry, a \enquote{geometric turn} of a sort. The geometrization becomes possible ---and above all necessary--- through the eruption of the \emph{cognitive}, which makes obsolete the old paradigm of verismo/dualism/atomism/essentialism inherited from the 20th century, the century of \emph{scientism}.
 
 Scientism seeks answers, while \emph{science} would instead seek questions. Around 1900, one would seek the \enquote{ultimate solutions}\footnote{}, all questions must find their answers, a little like maidens their husbands. Scientism, which cannot make any mistakes, tackled racial issues in 1904: 80,000 Hereros hanging in Namibia, in the name of eugenics... and it was nothing like the third Reich. And what to say about the final solution to class inequality, the extermination of the \enquote{Koulaks}, in the name of Marxist \enquote{science}, in the early 1930s? The paradigm under our critique is not affiliated with any of the murderous \enquote{-isms} of the past century; but it is fed by the same breast, an unprecedented regression of thought, accompanied by technical progress, also unprecedented.
 
@@ -27,18 +27,18 @@ To say that a scientist does not understand what he does, is a bit steep. The ne
 For sure, the time of great \enquote{honest men} is over, there will be no more of Descartes, of Pascal, of Leibniz. The specialization is such that when a scientist dominates the principal branches of his domain, without even making sparks, he passes for a Pico della Mirandola... Extended, but we must plead a sort of \enquote{cultural exception} about the philosophy of science. If there is no longer a philosopher-mathematician-physicist-astronomer, we can dream of a \enquote{mediation} between these irremediably decoupled activities.
 
 \section{The linguistic turn}
-The mediator between science and philosophy, this could be the logician. In fact, logic---with a an etymology too much resembling that of language---would it not define itself as the intersection between science and philosophy? Be that as it may, it is well placed for this---and between us, it is not very original.
+The mediator between science and philosophy, this could be the logician. In fact, logic ---with a an etymology too much resembling that of language--- would it not define itself as the intersection between science and philosophy? Be that as it may, it is well placed for this ---and between us, it is not very original.
 
 This remark underlies the \enquote{linguistic turn} of the past century, a moment of extreme importance. The linguistic turn, in giving to language a leading position, is opposed to \emph{verismo}\footnote{} in its manners, if not convincing, then at least sincere originally. Very quickly the project has found its limits: to reduce everything to properties of language, this is bold and interesting, but it confers on these properties a dubious extraterritoriality. One speaks of \enquote{meta} properties, and of meta-meta, in a manner of a Russian doll, each relieving the next, the turning point is set to... turn in circles, like a broken record, a foundational loop where two turtles are chasing each other and biting the other's tail, believing to advance while they are stuck in place. This is what we call Gödel's theorem of 1931: formally, it registers the failure of \enquote{extraterritoriality}. After this date, the \enquote{turning} is no more, at a conscious level at least, than a purely scholastic, academic activity.
 
-The dominant vision---counter-reform after Gödel's theorem---conforms to Nestorian theology: everything rests on a trinity of Semantics/Syntax/Meta. The Son (or Word) reflects only imperfectly his father (Semantics), this is the incompleteness of the Son as not being consubstantial. Luckily the Holy Spirit is there, a little rogue, to muddy the waters: it is the Meta, the Polyfilla of cracks in the foundations. This vision has attracted cordial contempt from the scientists, who prefer to pass for overweight Platonists rather than fueling the meta.
+The dominant vision ---counter-reform after Gödel's theorem--- conforms to Nestorian theology: everything rests on a trinity of Semantics/Syntax/Meta. The Son (or Word) reflects only imperfectly his father (Semantics), this is the incompleteness of the Son as not being consubstantial. Luckily the Holy Spirit is there, a little rogue, to muddy the waters: it is the Meta, the Polyfilla of cracks in the foundations. This vision has attracted cordial contempt from the scientists, who prefer to pass for overweight Platonists rather than fueling the meta.
 
 The call on the meta returns to admitting the primitive side, resisting at every analysis, logical operations\footnote{}: on layers of verismo (the inevitable call on the theory of sets, seen \emph{infra}) and dualism (the opposition of syntax/semantics) it superimposes a doubtful \emph{essentialism}... After Nestorius, Thomas Aquinas.
 
 \section{Augustine vs Thomas}
 The remedy turns out to be worse than evil, there is something rotten in the longuistic turn. Looking closely, we may distinguish two aspects, one part of which being a \emph{proceduralism} which by nature is closer to existentialism, that of Augustin\footnote{}. The other part is an atomism which would like to reduce complex to simple, big to small: one thinks that a galaxy is made of stars, and not conversely; this atomism has failed in physics, in biology\footnote{}. It is responsible for the essentialist regression, for the prominence of the \enquote{meta} in the \emph{linguistic turn}.
 
-Some logicians, and non the less, thinking about the Gödel/Bernays debate\footnote{}, have an Augustinian position: \enquote{the proof is prior to the thing being proved\footnote{}}, as opposed to the Thomism of Tarski or Kreisel\footnote{}. The Augustinianism in logic consists of a priority toward \emph{protocols}---which are necessarily a little linguistic in nature---but without giving them meaning \emph{a priori}: the meaning appears by polarization, when we focus on certain protocols, by \enquote{breaking the symmetry} so to speak. For an essentialist, the protocol, the formalism, the proof, follows the law, obeys it; the existentialist is more \enquote{western}\footnote{}: he hangs along and judges later, the things are what they are and not what they should be. Why is this trend so small? One must admit, because of the same atomism which has raged elsewhere: we can not give a revolutionary explanation of the world based on three pieces of string, by despising the contributions of real mathematics, of physics, and especially of the quantum. To present a consistent \enquote{Augustinian} point of view, it is necessary that existence preceeds essence, but which existence are we talking about? Surely not that of the 26 letters of the alphabet! Of the quest for geometry.
+Some logicians, and non the less, thinking about the Gödel/Bernays debate\footnote{}, have an Augustinian position: \enquote{the proof is prior to the thing being proved\footnote{}}, as opposed to the Thomism of Tarski or Kreisel\footnote{}. The Augustinianism in logic consists of a priority toward \emph{protocols} ---which are necessarily a little linguistic in nature--- but without giving them meaning \emph{a priori}: the meaning appears by polarization, when we focus on certain protocols, by \enquote{breaking the symmetry} so to speak. For an essentialist, the protocol, the formalism, the proof, follows the law, obeys it; the existentialist is more \enquote{western}\footnote{}: he hangs along and judges later, the things are what they are and not what they should be. Why is this trend so small? One must admit, because of the same atomism which has raged elsewhere: we can not give a revolutionary explanation of the world based on three pieces of string, by despising the contributions of real mathematics, of physics, and especially of the quantum. To present a consistent \enquote{Augustinian} point of view, it is necessary that existence preceeds essence, but which existence are we talking about? Surely not that of the 26 letters of the alphabet! Of the quest for geometry.
 
 \section{The cognitive}
 But while some are sleeping..., the evening stone turns in its [...]\footnote{}: but not in circles, insensitively, it puts itself to point in another direction, the \emph{cognitive}.
@@ -48,25 +48,25 @@ If verismo supposed a strict segregation between object and subject, we may defi
 \section{The (anti-)cognitive verismo}
 The cognitive being the same negation as verismo, it is thus natural that we have searched to reconcile them, or rather to \emph{choke} the cognitive in a realist straitjacket.
 
-A first example: we have found an analogy between cognitive phenomena and formal provability, this which is undeniable, but the comparison is not without reason. So is there an analogy between an iron a loudspeaker, both using an alternating current; yet a speaker plugged into 220V, this is not great. Here it's not about refusing the process---consubstantial with science---of reduction of a new phenomenon; it's simply about---when this process only leads to atrocities---admitting the irreducible novelty, and that's all. So, was it ligitimate to try and reduce the quantum to thermodynamics by means of \enquote{hidden variables}; but not to insist in the face of irrefragible failures.
+A first example: we have found an analogy between cognitive phenomena and formal provability, this which is undeniable, but the comparison is not without reason. So is there an analogy between an iron a loudspeaker, both using an alternating current; yet a speaker plugged into 220V, this is not great. Here it's not about refusing the process ---consubstantial with science--- of reduction of a new phenomenon; it's simply about ---when this process only leads to atrocities--- admitting the irreducible novelty, and that's all. So, was it ligitimate to try and reduce the quantum to thermodynamics by means of \enquote{hidden variables}; but not to insist in the face of irrefragible failures.
 
-valeurs de veritéThe know/prove analogy suggests a cognitive counterpart to models. Therefore we have attempted to reduce the cognitive to verismo by means of new truth values (\texttt{true, false, please wait, too late}), with modalities---the condoms\footnote{} of logic---(\texttt{for sure, this could be})... and, every time, it is not that. One arrives at best at laborious metaphores\footnote{} with every time an \emph{ad hoc} (il-)logical system, i.e., centered around the metaphor, which turns out to be a metaphor in itself\footnote{}. A single honorable failure, the \emph{Kripke models}---an funny idea of 1950, very superior to epistemic \enquote{logic} and other indignities---, but which shows itself to be sterile. One wants to talk about potentials, conditionals: it is simple, we make a list of all possible worlds. But, if the list of possibilities is already there, it makes one wonder where the potential is hidden, it is shy or what? In a problem which demands a radical Yalta redistribution of object/subject, we are content to just put mustaches on the objects. All the same, the problem with logical time and temporal \enquote{logic}; this grand mystery of nature, time, is evacuated bureaucratically, we index everything by time. As the song goes \enquote{Si l'on pouvait arrêter les aiguilles [if we could stop the needles]}... here, it is clocks that secrete time. The small cognitive vibration is recreated by external means, the models which obey the indices \emph{perinde ac cadaver}..., the models of Loyola in a way.
+valeurs de veritéThe know/prove analogy suggests a cognitive counterpart to models. Therefore we have attempted to reduce the cognitive to verismo by means of new truth values (\texttt{true, false, please wait, too late}), with modalities ---the condoms\footnote{} of logic--- (\texttt{for sure, this could be})... and, every time, it is not that. One arrives at best at laborious metaphores\footnote{} with every time an \emph{ad hoc} (il-)logical system, i.e., centered around the metaphor, which turns out to be a metaphor in itself\footnote{}. A single honorable failure, the \emph{Kripke models} ---an funny idea of 1950, very superior to epistemic \enquote{logic} and other indignities--- , but which shows itself to be sterile. One wants to talk about potentials, conditionals: it is simple, we make a list of all possible worlds. But, if the list of possibilities is already there, it makes one wonder where the potential is hidden, it is shy or what? In a problem which demands a radical Yalta redistribution of object/subject, we are content to just put mustaches on the objects. All the same, the problem with logical time and temporal \enquote{logic}; this grand mystery of nature, time, is evacuated bureaucratically, we index everything by time. As the song goes \enquote{Si l'on pouvait arrêter les aiguilles [if we could stop the needles]}... here, it is clocks that secrete time. The small cognitive vibration is recreated by external means, the models which obey the indices \emph{perinde ac cadaver}..., the models of Loyola in a way.
 
-Quantum mechanics has been---in fact always, hasn't it, Claude Allègre?---an object of visceral refusal on the part of verists, because of a detail---after all minor---its non-determinism\footnote{}. In parallel with \enquote{hidden variables}, the logicians have tried to \enquote{drink the spell} by means of twistedvalues of verismo... Poor von Neumann, he was hardly inspired when he created quantum \enquote{logic}... it is true that he hardly persevered in this way, and that we also owe him algebraic eponyms, and there, it is tough. We know this which has happened in quantum logic, or rather we don't even know. The original sin was verist in nature: we keep the paradigm of verismo values, we will simply replace Boolean algebra by the orthogonal projectors of Hilbert space; this is a bit as if we had attached a fan to a wheelbarrow: we can't put anything more inside and it doesn't fly however. The good idea (the von Neumann algebras) is not far away, but it does not return in a dualiste frame of semantics/syntax. Besides, whatever the imperfections of the explanation called \enquote{of Copenhagen}, it is evident that the quantum can not accomodate a swing of object/subject.
+Quantum mechanics has been ---in fact always, hasn't it, Claude Allègre?--- an object of visceral refusal on the part of verists, because of a detail ---after all minor--- its non-determinism\footnote{}. In parallel with \enquote{hidden variables}, the logicians have tried to \enquote{drink the spell} by means of twistedvalues of verismo... Poor von Neumann, he was hardly inspired when he created quantum \enquote{logic}... it is true that he hardly persevered in this way, and that we also owe him algebraic eponyms, and there, it is tough. We know this which has happened in quantum logic, or rather we don't even know. The original sin was verist in nature: we keep the paradigm of verismo values, we will simply replace Boolean algebra by the orthogonal projectors of Hilbert space; this is a bit as if we had attached a fan to a wheelbarrow: we can't put anything more inside and it doesn't fly however. The good idea (the von Neumann algebras) is not far away, but it does not return in a dualiste frame of semantics/syntax. Besides, whatever the imperfections of the explanation called \enquote{of Copenhagen}, it is evident that the quantum can not accomodate a swing of object/subject.
 
 \section{The computer science challenge}
-More belatedly, computer science [fr: informatique] had to take the relays by launching a new cognitive challenge. Ass much as computer languages are very similar to formal languages, the programming does not treat itself as a verist, in true/false. Thus, that which interests the computer scientist is not the \emph{veracity} of information on the Internet, but rather its accessibility, its reproducibility... Imperceptibly, the boolean value as basis has passed from \texttt{true/false} to \texttt{left/right}, that is to say only the opposition between the two remains relevant, just like spin up/spin down as basis. Suddenly, a school of thought, going back to Poincaré, Brouwer,..., \emph{intuitionism}, lost since long in quarrels of the chapel, resurfaced. For the subjectivist, and thus inept, intuitionism became derealist, \emph{procedural}, Augustinian. What is procedurality? It is the fact that the machine interacts with... other machiens, by respecting protocols, and that nothing else matters. The rest, this which we see---or rather \emph{believe} that we see---is not relevant, all that matters is the dialogue of machines.
+More belatedly, computer science [fr: informatique] had to take the relays by launching a new cognitive challenge. Ass much as computer languages are very similar to formal languages, the programming does not treat itself as a verist, in true/false. Thus, that which interests the computer scientist is not the \emph{veracity} of information on the Internet, but rather its accessibility, its reproducibility... Imperceptibly, the boolean value as basis has passed from \texttt{true/false} to \texttt{left/right}, that is to say only the opposition between the two remains relevant, just like spin up/spin down as basis. Suddenly, a school of thought, going back to Poincaré, Brouwer,..., \emph{intuitionism}, lost since long in quarrels of the chapel, resurfaced. For the subjectivist, and thus inept, intuitionism became derealist, \emph{procedural}, Augustinian. What is procedurality? It is the fact that the machine interacts with... other machiens, by respecting protocols, and that nothing else matters. The rest, this which we see ---or rather \emph{believe} that we see--- is not relevant, all that matters is the dialogue of machines.
 
-Let's take the example of a cognitivist failure: the computer scientists convinced themselves, when studying databases, that \enquote{missing information is false}. In effect, a bank is able to say \enquote{Mr. Kurz is not a client of ours} even though it does not have a file of all its non-clients. An essential cognitivist remark, immediately screwed up, by the equation of \enquote{knowing} with \enquote{proving}. The \enquote{non-monotone logics} resemble a remake of the Hilbert program---which was based on a related idea, refuted by Gödels theorem---, but with the underlings [fr: troisième couteaux] of logic: if a property is not provable, then its negation is. Technically, the error is easy to understand, it \emph{suffices} to force the equivalence \texttt{true = provable}, which forces to pass over the body of undecidable properties, that correspond to \enquote{loops}, finite or infinite, of the calculus: we postulate therefore this sea serpent, the \enquote{loop detector}... But a diagonal argument---going back to Cantor, Russell, Gödel---produces for each \enquote{detector} a loop which escapes it: \emph{exit} non-monotone logics. But why then have we desired to force this equivalence between truth and provability? Common sense rebels against this: so a bank will not find a client by her maiden name, although she is recorded in the data concerning her; likewise, there is no absolute notion of \enquote{presence of a file on a hard disk}, the police may search it for \enquote{deleted} images, but which persist at least partially, while their owner beileves them destroyed. In other words, the \enquote{no} of the bank, the software of the search, refers to its internal procedures and nothing else. Wanting it to be otherwise is both torturing the logic and scorning \enquote{reality}. The bank does not say anything about \emph{the} quote, i.e. the response which it gives refers to a mode of exploration, to a search procedure.
+Let's take the example of a cognitivist failure: the computer scientists convinced themselves, when studying databases, that \enquote{missing information is false}. In effect, a bank is able to say \enquote{Mr. Kurz is not a client of ours} even though it does not have a file of all its non-clients. An essential cognitivist remark, immediately screwed up, by the equation of \enquote{knowing} with \enquote{proving}. The \enquote{non-monotone logics} resemble a remake of the Hilbert program ---which was based on a related idea, refuted by Gödels theorem---, but with the underlings [fr: troisième couteaux] of logic: if a property is not provable, then its negation is. Technically, the error is easy to understand, it \emph{suffices} to force the equivalence \texttt{true = provable}, which forces to pass over the body of undecidable properties, that correspond to \enquote{loops}, finite or infinite, of the calculus: we postulate therefore this sea serpent, the \enquote{loop detector}... But a diagonal argument ---going back to Cantor, Russell, Gödel--- produces for each \enquote{detector} a loop which escapes it: \emph{exit} non-monotone logics. But why then have we desired to force this equivalence between truth and provability? Common sense rebels against this: so a bank will not find a client by her maiden name, although she is recorded in the data concerning her; likewise, there is no absolute notion of \enquote{presence of a file on a hard disk}, the police may search it for \enquote{deleted} images, but which persist at least partially, while their owner beileves them destroyed. In other words, the \enquote{no} of the bank, the software of the search, refers to its internal procedures and nothing else. Wanting it to be otherwise is both torturing the logic and scorning \enquote{reality}. The bank does not say anything about \emph{the} quote, i.e. the response which it gives refers to a mode of exploration, to a search procedure.
 
 The \emph{algorithmic complexity} is another example of a cognitive problem. After considerations of efficacy, we have been lead to classify the algorithms, for example, based on computation times, thereby algorithms in \emph{polynomial time}, and the whole world has heard about the famous \texttt{P = NP?} problem. The approaches to this question are verist, e.g., \enquote{finite models}; they haven't given much, we don't even have a \emph{handy} definition of polynomial time algorithms. The complexity has a strange status, that of a set theory (seen from the \emph{infra}) with a main attachment on the back\footnote{}: we don't have rights to the exponential function, it \enquote{costs} too much. But would there be an \emph{intrinsic} reason, mathematical, for refusing the exponential function and non-polynomial algorithms? This may be the hidden meaning of the question, without any real concrete stake, \texttt{P = NP?}. Of course, this reason would be of a forcibly cognitive nature.
 
-It is possible that the challenge of computer science is as profound as that of the quantum. Besides, the emergence of a \emph{quantum calculus}---very theoretical at the moment---might aspire to a convergence of the principles behind the two activities\footnote{}.
+It is possible that the challenge of computer science is as profound as that of the quantum. Besides, the emergence of a \emph{quantum calculus} ---very theoretical at the moment--- might aspire to a convergence of the principles behind the two activities\footnote{}.
 
 \section{Set-theoretic atomism}
 Superficially, the \enquote{linguistic turn} opposes itself against verismo, an idea moreover revolutionary for the epoch. But let's scratch a little, and we find a profound layer, very 21st century, very atomist, the theory of sets, like the government in Bordeaux of 1940: in \enquote{Nestorian theology}, the Father is a set theorist. The error of the linguistic turners, this is to not have ever delivered a cause for this moral pervasiveness of sets and biases since the beginning of the 20th century.
 
-These biases were not, at the beginning, even foundational. If the focus of the \textbf{ZF} system is done essentially in 1908, by Zermelo, it is in the 21st century that it is developing, based on the works of Cantor on \enquote{exceptional} sets: do the values of a function determine their Fourier series, and in that case, may one ignore some? Nothing really foundational here. There was also a real need for clarification after the discovery of \enquote{free riders} in the worls of analysis, e.g., a function without derivative; this was the time of Bolzano, Weierstraß, Peano. To the end with \enquote{we can see that}: if a curve does not have a tangent, one does not \enquote{see} anything! A colossal work has been performed to define rigorously all mathematical notions---thinking especially about Dedekind---in an atomist spirit: define the the big terms of the small, the complex in terms of the simple.
+These biases were not, at the beginning, even foundational. If the focus of the \textbf{ZF} system is done essentially in 1908, by Zermelo, it is in the 21st century that it is developing, based on the works of Cantor on \enquote{exceptional} sets: do the values of a function determine their Fourier series, and in that case, may one ignore some? Nothing really foundational here. There was also a real need for clarification after the discovery of \enquote{free riders} in the worls of analysis, e.g., a function without derivative; this was the time of Bolzano, Weierstraß, Peano. To the end with \enquote{we can see that}: if a curve does not have a tangent, one does not \enquote{see} anything! A colossal work has been performed to define rigorously all mathematical notions ---thinking especially about Dedekind--- in an atomist spirit: define the the big terms of the small, the complex in terms of the simple.
 
 The success of the theory of sets is undeniable, it is the \enquote{language of the foundational level} of mathematics: according to evidence, everything may be written in \textbf{ZF}. The theory of sets accounces a unity of mathematics\footnote{}, but only a \emph{unity in principle}. It represents more of a possibility than a reality: one does \emph{not} write, or only little, of mathematics in set theory; but one \emph{could}. This is to say that one may \emph{translate} into the theory of sets; but, \emph{traduttore traditore}, still bestowing \emph{ipso facto} a foundational role.
 
@@ -83,9 +83,9 @@ This example should suffice to convince us that we are attesting a real expulsio
 But \emph{what} about the \emph{commutative}? Operators commute when they are \enquote{diagonalized} by a common \enquote{basis}\footnote{}. The unsaid common in logic, in the theory of sets, of categories, is the implicit agreement on such a \enquote{basis}. All these beautiful things, sets, elements, proofs, models, language, objects, morphisms, functions, arguments... \enquote{commute}. We don't agree on anything, except on this basic, set-theoretic \enquote{arena}, where everything is played out, everything is measured. Everyone is thus based on the same location, but let's imagine a chock that shifts the gyroscopes... the questions no longer fall exactly on their answers, the marbles in their boxes. However, if logic is also Augustinian like the physical world, the interaction takes place despite the absence of a formal status. In physics, we know that it happens by means of the \emph{reducion of the wave packet}. This is what to import into logic to spice up the object/subject relation!
 
 \section{The geometric turn}
-This expression should not be taken as a rejection of the linguistic turn, to which we owe the fundamental advances. It is more of a reform, after the fossilisation that we have talked about. The linguistic idea is excellent, it is the first step of any derealisation, but as any ideology it has its cellars, its non-spoken subliminals. And here the unspoken relates to meaning. Without truly admitting it, we have supposed that language came out of an empty world, stupidly egalitarian, all ideas becoming uniformly ugly when we have coded them sufficiently, bureaucratized them, this is the atomism that we have already denounced, and let's remomber that the 20st century was also the century of Brezhnev. So do the perfectly uneducated people pretend that mathematics is $2+2=4$, thereby showing a confusion between a calcuation and a theorem; the logicians,---seemingly---very sophisticated after the linguistic turn, are rather saying that $2+2=5$ because, isn't it, language is arbitrary... Recall these people choosing their notation, they write a tensor product as $\oplus$ and a direct sum as $\otimes$, there is no favouritism in the land of symbols!
+This expression should not be taken as a rejection of the linguistic turn, to which we owe the fundamental advances. It is more of a reform, after the fossilisation that we have talked about. The linguistic idea is excellent, it is the first step of any derealisation, but as any ideology it has its cellars, its non-spoken subliminals. And here the unspoken relates to meaning. Without truly admitting it, we have supposed that language came out of an empty world, stupidly egalitarian, all ideas becoming uniformly ugly when we have coded them sufficiently, bureaucratized them, this is the atomism that we have already denounced, and let's remomber that the 20st century was also the century of Brezhnev. So do the perfectly uneducated people pretend that mathematics is $2+2=4$, thereby showing a confusion between a calcuation and a theorem; the logicians, ---seemingly--- very sophisticated after the linguistic turn, are rather saying that $2+2=5$ because, isn't it, language is arbitrary... Recall these people choosing their notation, they write a tensor product as $\oplus$ and a direct sum as $\otimes$, there is no favouritism in the land of symbols!
 
-That all is nothing but language, or at least, that in the manner of a table in a chinese restaurant, the world offers itself to us in various equivalent forms---including language---in a way that can be apprehended from various angles, here is a respectable thesis, which we may hold without much risk to the linguistic turn. In return, we will make the hypothesis that language is structured, that it is not that bureaucratic desert which we have just reached. But, what structure, where to search? Surely not in a verbose description of language, which leads to a pretentious and sterile essentialism. What remains is \emph{geometry}. By geometry, we don't intend anything very precise, let's say geometry is that which is sensitive to being coded, that which resists being coded.
+That all is nothing but language, or at least, that in the manner of a table in a chinese restaurant, the world offers itself to us in various equivalent forms ---including language--- in a way that can be apprehended from various angles, here is a respectable thesis, which we may hold without much risk to the linguistic turn. In return, we will make the hypothesis that language is structured, that it is not that bureaucratic desert which we have just reached. But, what structure, where to search? Surely not in a verbose description of language, which leads to a pretentious and sterile essentialism. What remains is \emph{geometry}. By geometry, we don't intend anything very precise, let's say geometry is that which is sensitive to being coded, that which resists being coded.
 
 Geometry, this is the discovery of simple structures, of symmetries. Let's give an example: anyone thinks a little about logic knows that the implication $\forall x \exists y \implies \exists y \forall x$ is incorrect. But why exactly? The current explanation is that in the first case the variable $y$ depends on $x$, and in the second case, it is independent of $x$... an absurd argument! [fr: et voilà pourquoi votre fille est muette!] However, one may say more about this sad paraphrase: the universal quantifier $\forall x$ is negative, passive: it waits for something, or in other words, \enquote{give me a value $a$ for $x$ and I will give you a value for $y$}; before acting, it is in the realm of the implicit, since it refers to an $x=a$ which is unknown. Nothing like $\exists y$, which is positive, active, explicit: $\exists y$ goes to say \enquote{I have a value $b$ for $y$, I am not showing it to you, it lies at the bottom of my suitcase, but if you insist you can have it}. Positive and negative progress differently, one may always postpone the positive (the making of the decision) or, if on prefers to advance the questions, a group $+-$ may thus be replaced by a $-+$, thus, $\exists y \forall x$ implies $\forall x \exists y$, but the converse is false. This has an immense mnemonic value, as it is difficult to remember the behavior of quantification in relation to modalities; from this we remark that $\Box$ is positive, since we know the direction is $\Box\forall\implies\forall\Box$, and not the inverse.
 
@@ -101,7 +101,7 @@ In the last chapter of \emph{Retour du divin} (1943), Audiberti develops the myt
 
 Logic, the language paradigm, the theory of sets, the \enquote{commutative} world, this is a little like this submarine. We would like to leave, but, \emph{modulo} the translations of the 21st century, all, even the quantum, all of non-commutative geometry, all may be written in set theory, and all may be axiomatized, all is ultimately language. Worst of all, just this which has no meaning when it is formalized: thus, shouldn't we argue very strongly to convince anyone about the nullity of the logic of the [?]... But in a corner of the old woods the unavoidable sophism: \enquote{the consistency of the system is a mathematical statement which necessarily has a meaning}.
 
-However, we have the impression that, as Thom said, the limits of truth, they are not falsity, they are insignificant\footnote{}. We could reasonably maintain that Gödel's theorem, before \enquote{I am not provable}, is first \enquote{I don't want to say anything}. This idea that anything () is \emph{a priori} true or false is a \enquote{fundamental intuition} which we can hardly get rid of. An analogy in the domain of moral: we have just experienced a Manichaean war, the axis of good against the axis of evil---and
+However, we have the impression that, as Thom said, the limits of truth, they are not falsity, they are insignificant\footnote{}. We could reasonably maintain that Gödel's theorem, before \enquote{I am not provable}, is first \enquote{I don't want to say anything}. This idea that anything () is \emph{a priori} true or false is a \enquote{fundamental intuition} which we can hardly get rid of. An analogy in the domain of moral: we have just experienced a Manichaean war, the axis of good against the axis of evil ---and
 
 \section{Did God make the integers?}
 
